# ViCAR

./: .gitignore  .lia.cache  Makefile  README.md  _CoqProject  coq-vicar.opam  dune-project
.github/workflows/: coq-action.yml
ViCaR/: AutomaticParsing.v  CategoryAutomation.v  CategoryAutomationCompatibility.v  GeneralLemmas.v  MonoidalCoherence.v  dune
ViCaR/Classes/: BraidedMonoidal.v  CastCategory.v  Category.v  CategoryAltNotations.v  CategoryAutomation.v  CategoryTypeclass.v  CategoryTypeclassCompatibility.v  CompactClosed.v  Dagger.v  DaggerBraidedMonoidal.v  DaggerMonoidal.v  DaggerSymmetricMonoidal.v  ExamplesAutomation.v  Monoidal.v  RigCategory.v  SymmetricMonoidal.v
examples/: BraidedMonoidalCoherence.v  CatExample.v  CategoryConstructions.v  DirectSumMatrixExample.v  DiscreteCategories.v  KronComm.v  KronComm_orig.v  KronMatrixExample.v  MatrixExampleBase.v  MatrixPermBase.v  MonoidalCoherence.v  NatRelationsExample.v  RelationsExample.v  TypesExample.v  TypoidExample.v  ZXExample.v  dune
